--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ ws = {version="*", features=["ssl"]}
 url = "1.5"
 openssl = "0.9.24"
 
-hmac = "0.5"
-sha2 = "0.7"
+rustc-serialize = "0.3"
+rust-crypto = "0.2"
